--- a/MediMapAPI/MediMapAPI/appsettings.json
+++ b/MediMapAPI/MediMapAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\WebAPI;Database=MediMapDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
