--- a/MediMapAPI/MediMapAPI/appsettings.json
+++ b/MediMapAPI/MediMapAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\WebAPI;Database=MediMapDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": ""
   }
 }
