--- a/MediMapAPI/MediMapAPI/Properties/launchSettings.json
+++ b/MediMapAPI/MediMapAPI/Properties/launchSettings.json
@@ -1,20 +1,13 @@
 {
   "profiles": {
-    "http": {
-      "commandName": "Project",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5125"
-    },
     "https": {
       "commandName": "Project",
+      "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7038;http://localhost:5125"
+      "applicationUrl": "https://localhost:5001"
     },
     "IIS Express": {
       "commandName": "IISExpress",
