--- a/.github/workflows/MediMap-Deployment.yml
+++ b/.github/workflows/MediMap-Deployment.yml
@@ -81,8 +81,8 @@ jobs:
       - name: Run Unity Tests 🧪
         uses: game-ci/unity-test-runner@v2
         with:
-          unityVersion: 2020.3.29f1
-          projectPath: ./HiveSpace
+          unityVersion: 6000.0.42f1
+          projectPath: ./MediMapGame
           testMode: editmode
           artifactsPath: ./unity-test-results
         env:
